<resources>
    <string name="app_name">Prepself</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="checklist">Checklist</string>
    <string name="fridge">Fridge</string>
    <string name="user_info">User Info</string>
    <string name="cooking_list">Cooking List</string>
    <string name="discovery">Discovery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>