<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <View
        android:id="@+id/navigationButtonsView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:layout_editor_absoluteX="-65dp" />

    <ImageButton
        android:id="@+id/fridge_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/fridge"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fridge"
        app:layout_constraintBottom_toBottomOf="@+id/navigationButtonsView"
        app:layout_constraintEnd_toStartOf="@+id/cooking_list_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/navigationButtonsView"
        app:layout_constraintStart_toStartOf="@+id/navigationButtonsView"
        app:layout_constraintTop_toTopOf="@+id/navigationButtonsView" />

    <ImageButton
        android:id="@+id/cooking_list_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/cooking_list"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cooking_list"
        app:layout_constraintBottom_toBottomOf="@+id/navigationButtonsView"
        app:layout_constraintEnd_toStartOf="@+id/discovery_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fridge_button"
        app:layout_constraintTop_toTopOf="@+id/navigationButtonsView"
        tools:layout_editor_absoluteY="30dp" />

    <ImageButton
        android:id="@+id/discovery_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/discovery"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/discovery"
        app:layout_constraintBottom_toBottomOf="@+id/navigationButtonsView"
        app:layout_constraintEnd_toStartOf="@+id/checklist_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cooking_list_button"
        app:layout_constraintTop_toTopOf="@+id/navigationButtonsView"
        tools:layout_editor_absoluteY="20dp" />

    <ImageButton
        android:id="@+id/checklist_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/checklist"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/checklist"
        app:layout_constraintBottom_toBottomOf="@+id/navigationButtonsView"
        app:layout_constraintEnd_toStartOf="@+id/user_info_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/discovery_button"
        app:layout_constraintTop_toTopOf="@+id/navigationButtonsView"
        tools:layout_editor_absoluteY="30dp" />

    <ImageButton
        android:id="@+id/user_info_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/user_info"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/user_info"
        app:layout_constraintBottom_toBottomOf="@+id/navigationButtonsView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checklist_button"
        app:layout_constraintTop_toTopOf="@+id/navigationButtonsView"
        tools:layout_editor_absoluteY="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>